--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "name": "annotator-frontend",
+  "author": "Jonathan Cole <joncole04412@gmail.com>",
+  "description": "Description",
+  "version": "0.0.1",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/seieibob/MEP-Annotator"
+  },
   "main": "dist/annotator-module.js",
   "devDependencies": {
     "babelify": "^6.1.0",
