--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "jquery-ui": "^1.12.1",
     "screenfull": "^3.0.2"
   },
+  "scripts": {
+    "test": "grunt test"
+  },
   "browserify": {
     "transform": [
       "browserify-shim"
