--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: node_js
 node_js:
-  - "6"
-  
-before_install: npm install -g grunt-cli
-install: npm install
-before_script: grunt build
+    - "6"
+
+before_install: 
+    - npm install -g grunt-cli
+    - gem install sass
+install: 
+    - npm install
+before_script: 
+    - grunt build
