--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt": "^0.4.5",
     "grunt-browser-sync": "^2.2.0",
     "grunt-browserify": "^3.8.0",
+    "grunt-contrib-compress": "^1.4.1",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-extract-sourcemap": "^0.1.19"
