--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "devDependencies": {
     "babelify": "^6.1.0",
+    "browserify-css": "^0.10.0",
     "browserify-shim": "^3.8.13",
     "grunt": "^0.4.5",
     "grunt-browser-sync": "^2.2.0",
@@ -24,6 +25,7 @@
   "dependencies": {
     "clip-path-polygon": "^0.1.11",
     "jquery-ui": "^1.12.1",
+    "qtip2": "^3.0.3",
     "screenfull": "^3.0.2"
   },
   "scripts": {
@@ -31,7 +33,11 @@
   },
   "browserify": {
     "transform": [
-      "browserify-shim"
+      "browserify-css",
+      "browserify-shim",
+      ["babelify", {
+          "loose": "all"
+      }]
     ]
   },
   "browserify-shim": {
